# tfpt5-shadow

./: .gitignore  README.md  SHADOW_MIRROR.md  build.sh  changelog.tex  check.txt  hypergraph.md  introduction.tex  lean_manifest.sha256  manifest.sha256  next-plan.md  next.txt  nextv2.txt  origin_theory.tex  tfpt_1_architecture_e8.tex  tfpt_2_standard_model.tex  tfpt_3_e8_audit_bootstrap.tex  tfpt_4_frontier.tex  tfpt_5_redteam.tex  tfpt_horizon_readouts.tex  tfpt_research_contracts.tex  tfpt_safeguards.tex  zenodo_description.html
experiments/bbn-lithium-watchdog/: README.md  pyproject.toml
experiments/bbn-lithium-watchdog/data/: measurements.json
experiments/bbn-lithium-watchdog/results/: results.json
experiments/ccbh-dark-energy/: README.md  pyproject.toml
experiments/ccbh-dark-energy/data/: README.md  measurements.json
experiments/cmb-birefringence-seed/: README.md  pyproject.toml
experiments/cmb-birefringence-seed/data/: README.md  measurements.json
experiments/comb-meta-limit/: README.md  pyproject.toml
experiments/comb-meta-limit/results/: results.json
experiments/cosmic-dipole-watchdog/: README.md  pyproject.toml
experiments/cosmic-dipole-watchdog/data/: measurements.json
experiments/cosmic-dipole-watchdog/results/: results.json
experiments/cosmic-handedness/: README.md  pyproject.toml
experiments/cosmic-handedness/data/: README.md  measurements.json
experiments/crust-cooling-comb/: .gitignore  README.md  pyproject.toml
experiments/crust-cooling-comb/data/: AqlX-1_2016.csv  EXO0748-676.csv  KS1731-260.csv  MAXIJ0556-332_ob1.csv  MAXIJ0556-332_ob3.csv  MXB1659-29_ob1.csv  MXB1659-29_ob2.csv  README.md  XTEJ1701-462.csv
experiments/crust-cooling-comb/hypotheses/: crust_cooling_comb_v1.yaml
experiments/crust-cooling-comb/results/: results.json
experiments/crust-cooling-comb/scripts/: fetch_crust_cooling.py
experiments/dark-energy-w-watchdog/: README.md  pyproject.toml
experiments/dark-energy-w-watchdog/data/: README.md  measurements.json
experiments/dsi-false-positive-control/: README.md  pyproject.toml
experiments/dsi-false-positive-control/data/: efimov.json  mct_exponents.json
experiments/dsi-false-positive-control/hypotheses/: dsi_false_positive_control_v1.yaml  dsi_negative_controls_v2.yaml
experiments/dsi-false-positive-control/results/: results.json
experiments/dsi-false-positive-control/scripts/: fetch_aftershocks.py  fetch_flares.py
experiments/dsi-false-positive-control/tests/: test_frozen_kernel.py  test_negative_controls.py
experiments/eht-achromatic-residual/: .gitignore  README.md  pyproject.toml
experiments/eht-achromatic-residual/data/: README.md
experiments/eht-achromatic-residual/notebooks/: 01_tfpt_prediction.ipynb  02_synthetic_pipeline.ipynb  03_eht_public_data.ipynb
experiments/eht-achromatic-residual/results/: eht_real_achromaticity.json
experiments/eht-achromatic-residual/scripts/: fetch_eht_data.py
experiments/eht-achromatic-residual/tests/: test_constants.py  test_model.py  test_pipeline.py  test_residual.py
experiments/extended-signatures/: README.md  pyproject.toml
experiments/extended-signatures/results/: results.json
experiments/fixed-point-watchdog/: README.md  pyproject.toml
experiments/fixed-point-watchdog/data/: measurements.json
experiments/fixed-point-watchdog/results/: results.json
experiments/frb-tfpt-signatures/: .gitignore  README.md  pyproject.toml  search.txt
experiments/frb-tfpt-signatures/data/: README.md  chime_catalog1.tsv  frb01_subband_toas.csv  frb20121102_aggarwal2021.tsv  frb20121102_fast_li2021_1652.tsv  frb_dmz_adb84d_table4.txt  frb_dmz_adeb72_table1.txt  frb_pol_pandhi2024_table1.txt
experiments/frb-tfpt-signatures/hypotheses/: frb_tfpt_v1.yaml
experiments/frb-tfpt-signatures/results/: results.json
experiments/frb-tfpt-signatures/scripts/: extract_ar_toas.py  extract_subband_toas.py  fetch_data.py  fetch_user_data.py
experiments/frb-tfpt-signatures/tests/: test_language_rules_current.py  test_n_accounting.py  test_observable_semantics.py  test_recovery_kernel_constants.py
experiments/gauge-unification/: .gitignore  README.md  pyproject.toml
experiments/gauge-unification/results/: pati_salam.json  results.json
experiments/gravastar-compactness/: .gitignore  README.md  pyproject.toml
experiments/gravastar-compactness/data/: README.md  measurements.json
experiments/gw-ringdown-echo/: .gitignore  README.md  event_count_audit.md  pyproject.toml
experiments/gw-ringdown-echo/data/: README.md
experiments/gw-ringdown-echo/scripts/: fetch_catalog.py  fetch_strain.py  fetch_strain_16k.py  fetch_strain_4096.py
experiments/gw-ringdown-spectroscopy/: README.md  pyproject.toml
experiments/gw-ringdown-spectroscopy/data/: README.md  measurements.json
experiments/gw-speed-multimessenger/: README.md  pyproject.toml
experiments/gw-speed-multimessenger/data/: README.md  measurements.json
experiments/hfqpo-ladder/: README.md  pyproject.toml
experiments/hfqpo-ladder/data/: measurements.json
experiments/hfqpo-ladder/hypotheses/: hfqpo_v1.yaml
experiments/hfqpo-ladder/results/: results.json
experiments/hfqpo-ladder/tests/: test_frozen_kernel.py
experiments/higgs-criticality/: .gitignore  README.md  pyproject.toml
experiments/higgs-criticality/data/: README.md  measurements.json
experiments/lab-residuals/: .gitignore  README.md  pyproject.toml
experiments/lab-residuals/data/: README.md  measurements.json
experiments/lambda-h0-engine/: README.md  pyproject.toml
experiments/neutrino-mixing/: .gitignore  README.md  pyproject.toml
experiments/proton-decay/: .gitignore  README.md  pyproject.toml
experiments/proton-decay/data/: README.md  (+1 more)
experiments/pulsar-glitch-recovery/: .gitignore  README.md  pyproject.toml
experiments/qc-recovery-kernel/: .gitignore  README.md  pyproject.toml
experiments/qpe-recurrence/: README.md  pyproject.toml
experiments/quantum-testbed/: README.md  pyproject.toml
experiments/rare-kaon-bridge/: README.md  pyproject.toml
experiments/recovery-channel/: .gitignore  README.md  pyproject.toml
(+1113 files in other folders)
