[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-bbn-lithium-watchdog"
version = "0.1.0"
description = "TFPT frozen-eta BBN watchdog: the cosmological lithium-7 problem under the parameter-free baryon density (no BBN-side escape; astrophysical resolution predicted)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "BBN", "lithium problem", "baryon density", "watchdog"]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-li7 = "tfpt_li7.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_li7"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
