[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-ccbh-dark-energy"
version = "0.1.0"
description = "TFPT cosmologically-coupled-black-hole leg: de Sitter seam interior (w_in=-1) => coupling k=3 => population w=-1, vs Farrah+2023"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "dark energy", "cosmological coupling", "black holes", "CCBH", "Lambda", "Nariai"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-ccbh = "tfpt_ccbh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_ccbh"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
