[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-cmb-seed"
version = "0.1.0"
description = "TFPT cross-domain seed-line test: cosmic birefringence beta and the baryon fraction Omega_b from one seed phi0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "cosmic birefringence", "ACT", "Planck", "Omega_b", "seed line"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-cmb = "tfpt_cmb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_cmb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
