[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-cosmic-dipole-watchdog"
version = "0.1.0"
description = "TFPT isotropy watchdog: the cosmic number-count dipole anomaly (CatWISE/NVSS Ellis-Baldwin excess) vs the FLRW foundation of the TFPT cosmology branch (frontier dissolution watch)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "cosmic dipole", "Ellis-Baldwin", "cosmological principle", "FLRW", "frontier"]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-dipole = "tfpt_dipole.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_dipole"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
