[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "frb-tfpt-signatures"
version = "0.1.0"
description = "Search for TFPT-specific signatures (energy cascade, RM steps, PA classes) in real Fast Radio Burst data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stefan Hamann" },
]
keywords = [
    "TFPT",
    "fast radio bursts",
    "FRB",
    "CHIME",
    "energy distribution",
    "log-periodicity",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
frb-tfpt = "frb_tfpt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frb_tfpt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
