[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "gauge-unification"
version = "0.1.0"
description = "Confront the spectral-action prediction sin^2 theta_W = 3/8 (v244/v245) with the measured SM gauge couplings (PDG) via 1/2-loop RGE running"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stefan Hamann" },
]
keywords = ["TFPT", "gauge unification", "Weinberg angle", "spectral action", "RGE", "SO(10)"]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-gut = "tfpt_gut.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_gut"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
