[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-gravastar-compactness"
version = "0.1.0"
description = "TFPT Nariai Q_geom=3/8 vs Jampolski-Rezzolla gravastar max compactness C=3/8: ECO echo-template (delay + (2/3)^6 damping) for the horizonless light-trapping window"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "gravastar", "ECO", "compactness", "Nariai", "ringdown echoes", "EHT"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-gravastar = "tfpt_gravastar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_gravastar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
