[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-gw-echo"
version = "0.1.0"
description = "TFPT ringdown echo-amplitude-ratio test on LVK GWTC (frozen ratio (2/3)^6)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "gravitational waves", "ringdown", "echoes", "GWTC", "LVK"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-gw = "tfpt_gw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_gw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
