[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-gw-ringdown"
version = "0.1.0"
description = "TFPT QNM family-count signature: asymptotic omega_R/T_H -> ln3 = ln N_fam; area quantum 4 ln3"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "quasinormal modes", "ringdown", "Hod", "black hole", "area quantum"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-ringdown = "tfpt_ringdown.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_ringdown"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
