[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "hfqpo-ladder"
version = "0.1.0"
description = "Search target: BH high-frequency-QPO 3:2 pairs vs the TFPT kernel step 3/2, with the geometric-ladder discriminator against the GR integer-harmonic/resonance alternative"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stefan Hamann" },
]
keywords = [
    "TFPT",
    "HFQPO",
    "black hole",
    "3:2 resonance",
    "geometric ladder",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-hfqpo = "tfpt_hfqpo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_hfqpo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
