[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-higgs-criticality"
version = "0.1.0"
description = "TFPT Higgs near-criticality watchdog: lambda(M_Pl), beta_lambda(M_Pl) vs the double-critical surface (Buttazzo 2013 NNLO fit)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "Higgs", "criticality", "lambda", "vacuum stability", "RGE"]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-higgs = "tfpt_higgs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_higgs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
