[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-lambda-h0"
version = "0.1.0"
description = "TFPT cosmological-constant engine: rho_Lambda/M_pl^4 = (3/256pi^4) e^-2ainv, S_dS rho_Lambda = 32pi^4, H0 ~ sqrt(Lambda)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "cosmological constant", "dark energy", "de Sitter", "Hubble", "alpha"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-lambda = "tfpt_lambda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_lambda"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
