[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-neutrino-mixing"
version = "0.1.0"
description = "TFPT PMNS angles (theta12/theta13/theta23) + CKM delta vs NuFIT 6.0 / JUNO / LHCb"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "neutrino", "PMNS", "NuFIT", "JUNO", "CKM"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-neutrino = "tfpt_neutrino.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_neutrino"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
