[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-proton-decay"
version = "0.1.0"
description = "Confront the TFPT-predicted proton lifetime (carrier-native Pati-Salam -> SO(10) UV branch, v266/v249) against Super-Kamiokande limits and the Hyper-K / DUNE / JUNO future reach"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stefan Hamann" },
]
keywords = ["TFPT", "proton decay", "Pati-Salam", "SO(10)", "grand unification", "Super-Kamiokande", "Hyper-Kamiokande", "DUNE"]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-proton = "tfpt_proton.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_proton"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
