[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pulsar-glitch-recovery"
version = "0.1.0"
description = "Cross-domain TFPT recovery-kernel search in real pulsar-glitch data (Jodrell Bank Glitch Catalogue)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stefan Hamann" },
]
keywords = [
    "TFPT",
    "pulsar glitches",
    "Jodrell Bank",
    "recovery kernel",
    "log-periodicity",
    "cross-domain",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-pulsar = "tfpt_pulsar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_pulsar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
