[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "quantum-testbed"
version = "0.1.0"
description = "TFPT quantum testbed: entanglement spectrum + quench discrete-scale-invariance + free-fermion OTOC of the frozen recovery kernel"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stefan Hamann" },
]
keywords = [
    "TFPT",
    "entanglement spectrum",
    "OTOC",
    "discrete scale invariance",
    "quench",
    "recovery kernel",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-qtest = "tfpt_qtest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_qtest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
