[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-rare-kaon-bridge"
version = "0.1.0"
description = "TFPT rare-kaon flavour bridge as geometry: R_K, BR(K+), BR(KL), delta_CKM/gamma, Jarlskog, Grossman-Nir"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "kaon", "R_K", "Grossman-Nir", "Jarlskog", "CKM", "flavour"]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-kaon = "tfpt_kaon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_kaon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
