[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tfpt-recovery-channel"
version = "0.1.0"
description = "TFPT boundary-recovery kernel as an explicit quantum channel: CPTP, data-processing, QEC code, Page curve"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan Hamann" }]
keywords = ["TFPT", "quantum channel", "CPTP", "Page curve", "QEC", "boundary recovery"]
dependencies = ["numpy>=1.26", "scipy>=1.12"]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
tfpt-recovery = "tfpt_recovery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfpt_recovery"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
